# PIZDA

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md  EVALUATION.md
models/: README.md
src/interview_coach/: __main__.py  analytics.py  config.py  diagnose.py  fusion.py  interviewer.py  ollama.py  session.py  tts.py
src/interview_coach/audio/: features.py  speech_emotion.py  worker.py
src/interview_coach/ui/: app.py  post_session.py  widgets.py
src/interview_coach/utils/: smoothing.py  timing.py
src/interview_coach/vision/: analyzer.py  emotion_cnn.py  worker.py
src/interview_coach_hmi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
