[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-coach-hmi"
version = "0.1.0"
description = "Real-time multimodal AI interview coaching desktop HMI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "mediapipe>=0.10",
  "sounddevice>=0.4",
  "scipy>=1.10",
  "PyQt6>=6.5",
  "vosk>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
